src/tests/code/pass/pass_operator_combined_assignment_bit_or.u
entrypoint:~()
{
	iErrorCode:~i64{8};
	iErrorCode |= i64{0};
}
->(iErrorCode)