src/tests/code/fail/fail_entrypoint_namespace.u
namespace:math
{
	entrypoint:~()->(i64{2})
}
